# CLI

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  qmetrydecorator.py  qmetryupload.py  qmetryupload.py_old  report.xml  requirements.txt
.github/workflows/: ci-all-pytest-integration-main.yml
documentation/: running-github-action.md  running-tests.md  setting-up-vscode-in-ec2.md
integration-tests/chef360/: Test-Cases.json
integration-tests/chef360/Automation_using_Helm_setup/: Chef360 Helm deployment.py
integration-tests/chef360/Cli/: chef-courier-cli.py  chef_node_management_cli.py  sample.json  sheduler.json  sleep-job-2.json
integration-tests/chef360/HELM_test/: conftest.py  test1.py
integration-tests/chef360/automated-simple-job/: create-job-simple.json  register-agent-skill.json  test_simple_job_automate.py
integration-tests/chef360/automated-sleep-job/: conftest.py  courier-runner-skill.json  create-job-simple.json  enroll-linux.json  node-cohort.json  node-override-setting.json  report.xml  skill-assembly.json  test_sleep_job_automate.py
integration-tests/chef360/generic-test-inputs/: base-job-spec.json
integration-tests/chef360/nodes/: README.md
integration-tests/chef360/sample-tests/: README.md  __init__.py  conftest.py  test_create_job.py  test_create_node.py  test_delete_node.py
integration-tests/chef360/sample-tests/simple_api/: api_test.py  conftest.py
integration-tests/configuration/: config_options_test.py
reports/: report.xml
scripts/: clean.sh  run.sh  upload.sh
unittest/: README.md
(+7 files in other folders)
