[tool.poetry]
name = "chef-integration-tests"
version = "0.1.0"
description = "Chef Integration Tests"
authors = ["brianLoomis <loomis@progress.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
pytest-bdd = "^7.1.2"
assertpy = "^1.1"
requests = "^2.32.3"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
cachetools = "^5.3.3"
plumbum = "^1.8.3"
playwright = "^1.44.0"
pytest-env = "^1.1.3"
pytest-order = "^1.2.1"
configparser = "^7.0.0"
pytest-json-report = "^1.5.0"
junitxml = "^0.7"
pytest-xdist = "^3.6.1"
junit-xml = "^1.9"
junitparser = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "8.2.2"
pytest-html = "4.1.1"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"